--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,28 @@
 version: 2.1
-
 orbs:
   maven: circleci/maven@0.0.12
-
+jobs:
+  build:
+    docker:
+    - image: circleci/openjdk:8-jdk
+    working_directory: ~/repo
+    environment:
+    - CIRCLE_COMPARE_URL: https://github.com/martinsadeyeye/AppiumC
+    - MAVEN_OPTS: -Xmx3200m
+    steps:
+    - checkout
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "pom.xml" }}
+        - v1-dependencies-
+    - run: mvn dependency:go-offline
+    - save_cache:
+        paths:
+        - ~/.m2
+        key: v1-dependencies-{{ checksum "pom.xml" }}
+    - run: mvn test
 workflows:
-  maven_test:
+  version: 2.1
+  workflow:
     jobs:
-      - maven test # checkout, build, test, and upload test results
+    - build
