--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
         paths:
         - ~/.m2
         key: v1-dependencies-{{ checksum "pom.xml" }}
-    - run: mvn test
+    - run: 
+	- mvn clean
+	- mvn test
 workflows:
   version: 2.1
   workflow:
