--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,41 @@
+# Java Maven CircleCI 2.1 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2.1
-orbs:
-  maven: circleci/maven@0.0.12
 jobs:
   build:
     docker:
-    - image: circleci/openjdk:8-jdk
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
     working_directory: ~/repo
+
     environment:
-    #- CIRCLE_COMPARE_URL: https://github.com/martinsadeyeye/AppiumC
-    - MAVEN_OPTS: -Xmx3200m
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
+
     steps:
-    - checkout
-    - restore_cache:
-        keys:
-        - v1-dependencies-{{ checksum "pom.xml" }}
-        - v1-dependencies-
-    - run: mvn dependency:go-offline
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: v1-dependencies-{{ checksum "pom.xml" }}
-    - run: mvn test
-workflows:
-  version: 2.1
-  workflow:
-    jobs:
-    - build
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: mvn dependency:go-offline
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
+      # run tests!
+      - run: mvn test
